app/globals.css
@import "tailwindcss";

body {
    max-width: 100vw;
    overflow-x: hidden;
}


.content p {
    margin-bottom: 1rem;
}

.content br+br {
    display: block;
    content: '';
    margin-top: 1rem;
}

.content {
    white-space: pre-line;
}

.scrollbar-hide::-webkit-scrollbar {
    display: none;
}

.scrollbar-hide {
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.ProseMirror {
    min-height: 300px;
    outline: none;
}

.ProseMirror p {
    margin: 0;
}

.ProseMirror img {
    max-width: 100%;
    height: auto;
    display: block;
    margin: 16px auto;
}

.ProseMirror figure {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.ProseMirror figcaption {
    font-size: 14px;
    color: #6b7280;
    margin-top: 4px;
}

.ProseMirror .image-resizer {
    position: relative;
    display: inline-block;
  }

.ProseMirror .resize-handle {
    width: 12px;
    height: 12px;
    background: #2563eb;
    position: absolute;
    right: -6px;
    bottom: -6px;
    cursor: se-resize;
}

